--- a/package.json
+++ b/package.json
@@ -4,11 +4,41 @@
   "version": "0.0.1",
   "description": "Session handling app for xdcc",
   "scripts": {
-    "test": "echo \"Error: there is no active test configuration for now\" && exit 1"
+    "test": "grunt test"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/Yuyuu/xdcc-sessions.git"
   },
-  "author": "Vincent Tertre"
+  "author": "Vincent Tertre",
+  "engines": {
+    "node": "0.12.x",
+    "npm": "2.7.x"
+  },
+  "dependencies": {
+    "express": "4.x",
+    "express-jwt": "^3.0.0",
+    "body-parser": "^1.12.2",
+    "lodash": "^3.6.0",
+    "mongodb": "^2.0.27",
+    "12factor-config": "^1.0.0",
+    "morgan": "^1.5.2",
+    "log4js": "^0.6.22"
+  },
+  "devDependencies": {
+    "chai": "^2.0.0",
+    "glob": "^5.0.5",
+    "grunt-contrib-jshint": "^0.11.1",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-mocha": "^0.4.12",
+    "grunt-mocha-test": "^0.12.7",
+    "istanbul": "^0.3.13",
+    "jshint-stylish": "^1.0.1",
+    "matchdep": "^0.3.0",
+    "mocha": "^2.2.4",
+    "phantomjs": "^1.9.16",
+    "sinon": "^1.14.1",
+    "sinon-chai": "^2.7.0",
+    "watch": "^0.16.0"
+  }
 }
