--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.1",
   "description": "Session handling app for xdcc",
   "scripts": {
-    "test": "grunt test"
+    "test": "grunt check"
   },
   "repository": {
     "type": "git",
@@ -16,14 +16,14 @@
     "npm": "2.7.x"
   },
   "dependencies": {
+    "12factor-config": "^1.0.0",
+    "body-parser": "^1.12.2",
     "express": "4.x",
     "express-jwt": "^3.0.0",
-    "body-parser": "^1.12.2",
     "lodash": "^3.6.0",
+    "log4js": "^0.6.22",
     "mongodb": "^2.0.27",
-    "12factor-config": "^1.0.0",
-    "morgan": "^1.5.2",
-    "log4js": "^0.6.22"
+    "morgan": "^1.5.2"
   },
   "devDependencies": {
     "chai": "^2.0.0",
