--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "12factor-config": "^1.0.0",
+    "bcrypt": "^0.8.2",
     "body-parser": "^1.12.2",
     "express": "4.x",
     "express-jwt": "^3.0.0",
