--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "express-jwt": "^3.0.0",
     "lodash": "^3.6.0",
     "log4js": "^0.6.22",
-    "mongodb": "^2.0.27",
-    "morgan": "^1.5.2"
+    "mongodb": "^2.0.27"
   },
   "devDependencies": {
     "chai": "^2.0.0",
