--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
     "body-parser": "^1.12.2",
     "express": "4.x",
     "express-jwt": "^3.0.0",
+    "express-promise-router": "^0.0.9",
     "lodash": "^3.6.0",
     "log4js": "^0.6.22",
-    "mongodb": "^2.0.27"
+    "mongodb": "^2.0.27",
+    "validate": "^2.1.6"
   },
   "devDependencies": {
+    "bluebird": "^2.9.24",
     "chai": "^2.0.0",
     "glob": "^5.0.5",
     "grunt-contrib-jshint": "^0.11.1",
