--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "bcrypt": "^0.8.2",
     "body-parser": "^1.12.2",
     "express": "4.x",
-    "express-jwt": "^3.0.0",
     "express-promise-router": "^0.0.9",
+    "jsonwebtoken": "^5.0.0",
     "lodash": "^3.6.0",
     "log4js": "^0.6.22",
     "mongodb": "^2.0.27",
